NetBSD Problem Report #56525

From hf@nt.tu-darmstadt.de  Sat Nov 27 12:39:10 2021
Return-Path: <hf@nt.tu-darmstadt.de>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id BEEF51A923A
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 27 Nov 2021 12:39:10 +0000 (UTC)
Message-Id: <202111271239.1ARCd34r003022@Grossglockner.nt.e-technik.tu-darmstadt.de>
Date: Sat, 27 Nov 2021 13:39:03 +0100 (CET)
From: Hauke Fath <hf@spg.tu-darmstadt.de>
Reply-To: Hauke Fath <hf@spg.tu-darmstadt.de>
To: gnats-bugs@NetBSD.org
Cc: Hauke Fath <hf@spg.tu-darmstadt.de>
Subject: panic from spdmem iic search
X-Send-Pr-Version: 3.95

>Number:         56525
>Category:       kern
>Synopsis:       panic from spdmem iic search
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    msaitoh
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Nov 27 12:40:00 +0000 2021
>Closed-Date:    Mon Dec 06 08:30:29 +0000 2021
>Last-Modified:  Mon Dec 06 08:30:29 +0000 2021
>Originator:     Hauke Fath <hf@spg.tu-darmstadt.de>
>Release:        NetBSD 9.2_STABLE
>Organization:
Technische Universitaet Darmstadt
>Environment:


System: NetBSD Grossglockner 9.2_STABLE NetBSD 9.2_STABLE (RADMINDSRV) #1: Mon Nov 22 18:40:43 CET 2021 hf@Hochstuhl:/var/obj/netbsd-builds/9/amd64/sys/arch/amd64/compile/RADMINDSRV amd64
Architecture: x86_64
Machine: amd64
>Description:

	On an amd64 server (Supermicro H8DCL-iF board, AMD 4226 cpu,
	DDR3L-1600 ECC RAM), I enabled

spdmem* at iic? addr 0x50
spdmem* at iic? addr 0x51
spdmem* at iic? addr 0x52
spdmem* at iic? addr 0x53
spdmem* at iic? addr 0x54
spdmem* at iic? addr 0x55
spdmem* at iic? addr 0x56
spdmem* at iic? addr 0x57
sdtemp* at iic? addr 0x18
sdtemp* at iic? addr 0x19
sdtemp* at iic? addr 0x1a
sdtemp* at iic? addr 0x1b
sdtemp* at iic? addr 0x1c
sdtemp* at iic? addr 0x1d
sdtemp* at iic? addr 0x1e
sdtemp* at iic? addr 0x1f

which lead to a panic during startup:

[   1.0469023] piixpm0 at pci0 dev 20 function 0: vendor 1002 product 4385 (rev. 0x3d)
[   1.0469023] piixpm0: interrupting at SMI, 
[   1.0469023] iic0 at piixpm0 port 0: I2C bus
[   1.0469023] prevented execution of 0x0 (SMEP)
[   1.0469023] fatal page fault in supervisor mode
[   1.0469023] trap type 6 code 0x10 rip 0 cs 0x8 rflags 0x10202 cr2 0 ilevel 0x8 rsp 0xffffffff81adb368
[   1.0469023] curlwp 0xffffffff8165c4c0 pid 0.1 lowest kstack 0xffffffff81ad72c0
kernel: page fault trap, code=0
Stopped in pid 0.1 (system) at  0:      address 0x0 is invalid
push    %ds
db{0}> t
?() at 0
spdmem_i2c_match.part.0() at netbsd:spdmem_i2c_match.part.0+0x4d
spdmem_i2c_match() at netbsd:spdmem_i2c_match+0x4f
iic_search() at netbsd:iic_search+0x1eb
mapply() at netbsd:mapply+0x39
config_search_loc() at netbsd:config_search_loc+0xfe
iic_attach() at netbsd:iic_attach+0x409
config_attach_loc() at netbsd:config_attach_loc+0x1a5
config_found_sm_loc() at netbsd:config_found_sm_loc+0x48
piixpm_rescan() at netbsd:piixpm_rescan+0xf1
piixpm_attach() at netbsd:piixpm_attach+0x4ab
config_attach_loc() at netbsd:config_attach_loc+0x1a5
config_found_sm_loc() at netbsd:config_found_sm_loc+0x48
pci_probe_device() at netbsd:pci_probe_device+0x60c
pci_enumerate_bus() at netbsd:pci_enumerate_bus+0x1b7
pcirescan() at netbsd:pcirescan+0x4e
pciattach() at netbsd:pciattach+0x193
config_attach_loc() at netbsd:config_attach_loc+0x1a5
config_found_sm_loc() at netbsd:config_found_sm_loc+0x48
mp_pci_scan() at netbsd:mp_pci_scan+0xaa
amd64_mainbus_attach() at netbsd:amd64_mainbus_attach+0x22c
mainbus_attach() at netbsd:mainbus_attach+0x74
config_attach_loc() at netbsd:config_attach_loc+0x1a5
cpu_configure() at netbsd:cpu_configure+0x2b
main() at netbsd:main+0x351
db{0}> 


>How-To-Repeat:

	Attempt to configure spdmem/sdtemp devices on an older AMD
	Opteron server board.


>Fix:

	No idea.

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->msaitoh
Responsible-Changed-By: msaitoh@NetBSD.org
Responsible-Changed-When: Mon, 29 Nov 2021 05:01:28 +0000
Responsible-Changed-Why:
mine.


State-Changed-From-To: open->pending-pullups
State-Changed-By: msaitoh@NetBSD.org
State-Changed-When: Tue, 30 Nov 2021 04:57:02 +0000
State-Changed-Why:
pullup-9: #1378
pullup-8: #1709


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/56525 CVS commit: [netbsd-9] src/sys/dev/pci
Date: Tue, 30 Nov 2021 11:44:39 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Tue Nov 30 11:44:39 UTC 2021

 Modified Files:
 	src/sys/dev/pci [netbsd-9]: piixpm.c

 Log Message:
 Apply patch, requested by msaitoh in ticket #1378:

 	sys/dev/pci/piixpm.c				patch

 Fix a bug that I2C access panics on old AMD chipset (e.g SB600).
 Fixes PR kern/56525.


 To generate a diff of this commit:
 cvs rdiff -u -r1.54.2.1 -r1.54.2.2 src/sys/dev/pci/piixpm.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/56525 CVS commit: [netbsd-8] src/sys/dev/pci
Date: Tue, 30 Nov 2021 11:48:29 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Tue Nov 30 11:48:29 UTC 2021

 Modified Files:
 	src/sys/dev/pci [netbsd-8]: piixpm.c

 Log Message:
 Apply patch, requested by msaitoh in ticket #1709:

 	sys/dev/pci/piixpm.c					patch

 Fix a bug that I2C access panics on old AMD chipset (e.g SB600).
 Fixes PR kern/56525.


 To generate a diff of this commit:
 cvs rdiff -u -r1.52.6.2 -r1.52.6.3 src/sys/dev/pci/piixpm.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Hauke Fath <hf@spg.tu-darmstadt.de>
To: gnats-bugs@netbsd.org
Cc: msaitoh@netbsd.org, gnats-admin@netbsd.org, msaitoh@NetBSD.org
Subject: Re: kern/56525 (panic from spdmem iic search)
Date: Tue, 30 Nov 2021 17:40:34 +0100

 On Tue, 30 Nov 2021 04:57:03 +0000 (UTC), msaitoh@NetBSD.org wrote:
 > State-Changed-Why:
 > pullup-9: #1378

 [sdtemp0]
   DIMM 0 temperature:    28.500                                     =20
 degC
 [sdtemp1]
   DIMM 1 temperature:    32.500                                     =20
 degC
 [sdtemp2]
   DIMM 2 temperature:    27.000                                     =20
 degC
 [sdtemp3]
   DIMM 3 temperature:    27.500                                     =20
 degC

 -- fixed, thanks!

 Cheerio,
 Hauke

 --=20
      The ASCII Ribbon Campaign                    Hauke Fath
 ()     No HTML/RTF in email            Institut f=FCr Nachrichtentechnik
 /\     No Word docs in email                     TU Darmstadt
      Respect for open standards              Ruf +49-6151-16-21344

From: Hauke Fath <hf@spg.tu-darmstadt.de>
To: gnats-bugs@netbsd.org
Cc: msaitoh@netbsd.org, gnats-admin@netbsd.org
Subject: Re: kern/56525 (panic from spdmem iic search)
Date: Tue, 30 Nov 2021 18:03:06 +0100

 There is an autoconfiguration error, though:

 [...]
 [     1.046905] iic0 at piixpm0 port 0: I2C bus
 [     1.046905] spdmem0 at iic0 addr 0x50: M393B1K70DH0-YH9
 [     1.046905] spdmem0: DDR3 SDRAM (registered), ECC, temp-sensor,=20
 8GB, 1333MHz (PC3-10666)
 [     1.046905] spdmem0: 15 rows, 11 cols, 8 log. banks, 2 phys. banks,=20
 1.500ns cycle time
 [     1.046905] spdmem0: tAA-tRCD-tRP-tRAS: 9-9-9-24
 [     1.046905] spdmem0: 1.5V 1.35V operable
 [     1.046905] spdmem1 at iic0 addr 0x51: M393B1K70CH0-YH9
 [     1.046905] spdmem1: DDR3 SDRAM (registered), ECC, temp-sensor,=20
 8GB, 1333MHz (PC3-10666)
 [     1.046905] spdmem1: 15 rows, 11 cols, 8 log. banks, 2 phys. banks,=20
 1.500ns cycle time
 [     1.046905] spdmem1: tAA-tRCD-tRP-tRAS: 9-9-9-24
 [     1.046905] spdmem1: 1.5V 1.35V operable
 [     1.046905] spdmem2 at iic0 addr 0x52: M393B1K70DH0-YH9
 [     1.046905] spdmem2: DDR3 SDRAM (registered), ECC, temp-sensor,=20
 8GB, 1333MHz (PC3-10666)
 [     1.046905] spdmem2: 15 rows, 11 cols, 8 log. banks, 2 phys. banks,=20
 1.500ns cycle time
 [     1.046905] spdmem2: tAA-tRCD-tRP-tRAS: 9-9-9-24
 [     1.046905] spdmem2: 1.5V 1.35V operable
 [     1.046905] spdmem3 at iic0 addr 0x53: M393B1K70CH0-YH9
 [     1.046905] spdmem3: DDR3 SDRAM (registered), ECC, temp-sensor,=20
 8GB, 1333MHz (PC3-10666)
 [     1.046905] spdmem3: 15 rows, 11 cols, 8 log. banks, 2 phys. banks,=20
 1.500ns cycle time
 [     1.046905] spdmem3: tAA-tRCD-tRP-tRAS: 9-9-9-24
 [     1.046905] spdmem3: 1.5V 1.35V operable
 [     1.046905] sdtemp0 at iic0 addr 0x18: Microchip Tech MCP98243 Temp=20
 Sensor
 [     1.046905] autoconfiguration error: sdtemp0: error 1 writing=20
 resolution register
 [     1.046905] sdtemp0: high accuracy, wider range, 0.5C resolution,=20
 event with shutdown
 [     1.046905] sdtemp0: Hardware limits: none set
 [     1.046905] sdtemp1 at iic0 addr 0x19: Microchip Tech MCP98243 Temp=20
 Sensor
 [     1.046905] autoconfiguration error: sdtemp1: error 1 writing=20
 resolution register
 [     1.046905] sdtemp1: high accuracy, wider range, 0.5C resolution,=20
 event with shutdown
 [     1.046905] sdtemp1: Hardware limits: none set
 [     1.046905] sdtemp2 at iic0 addr 0x1a: Microchip Tech MCP98243 Temp=20
 Sensor
 [     1.046905] autoconfiguration error: sdtemp2: error 1 writing=20
 resolution register
 [     1.046905] sdtemp2: high accuracy, wider range, 0.5C resolution,=20
 event with shutdown
 [     1.046905] sdtemp2: Hardware limits: none set

 --=20
      The ASCII Ribbon Campaign                    Hauke Fath
 ()     No HTML/RTF in email            Institut f=FCr Nachrichtentechnik
 /\     No Word docs in email                     TU Darmstadt
      Respect for open standards              Ruf +49-6151-16-21344

State-Changed-From-To: pending-pullups->closed
State-Changed-By: msaitoh@NetBSD.org
State-Changed-When: Mon, 06 Dec 2021 08:30:29 +0000
State-Changed-Why:
pulled up to netbsd-[89].
Thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.