Apply patch, requested by msaitoh in ticket #1709:

sys/dev/pci/piixpm.c					patch

Fix a bug that I2C access panics on old AMD chipset (e.g SB600).
Fixes PR kern/56525.